Wed May 30 10:51:54 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

  * newmge-shut driver:
    - drivers/libshut.c:
      - complete shut_set_report(), needed for instant commands (and
        obviously UPS poweroff) and settings,
      - a bit of cleanup,
      - greatly improve driver reactivity, compared to mge-shut,
      - bump version to 0.80
    - data/drivers.list: propose as an alternate to mge-shut

Wed May 30 01:24:53 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - configure.in: bumped version number
 - UPGRADING: mentioned removed and renamed drivers

Mon May 28 14:12:14 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.c: expected number of characters for P4 command is off
   by one (adding debug lines to show what is going on)

Sun May 27 14:06:33 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - second attempt to add SVN revision in NUT version (as suggested by 
   Eric S. Raymond).
	
Sat May 26 16:47:23 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: disambiguated Belkin F6C1100-UNV models

Sat May 26 14:21:32 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - [various]: revert changes to add SVN revision in NUT version

Sat May 26 12:03:10 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added SVEN Power Smart RM 2000 to the list.

Sat May 26 11:49:12 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: added support for 48V batteries.

Fri May 25 18:54:54 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - packaging/debian/Makefile.am: Assuming removing the removal of
   nut-usb.postinst and nut-usb.prerm was intentional, the dependency
   should be removed as well.

Fri May 25 18:39:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - [various]: patch to add SVN revision in NUT version (by Eric S. Raymond)

Fri May 25 14:19:11 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
